--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -31,6 +31,10 @@
   @apply bg-blue-500 text-white focus:bg-blue-600 hover:bg-blue-600;
 }
 
+.btn-primary[disabled] {
+  @apply bg-gray-400 text-gray-600 cursor-not-allowed;
+}
+
 .btn-secondary {
   @apply bg-gray-200 text-gray-800 focus:bg-gray-400 hover:bg-gray-400;
 }
