--- a/app/views/shared/_dialog.html.erb
+++ b/app/views/shared/_dialog.html.erb
@@ -1,8 +1,8 @@
-<dialog class="m-auto rounded-lg bg-white text-left shadow-xl w-full sm:max-w-lg backdrop:bg-black/5" data-dialog-target="dialog" data-action="click->dialog#backdropClick turbo:submit-end->dialog#submitEnd">
-  <button type="button" data-action="dialog#close" class="absolute right-3 top-3 p-0.5 text-gray-400 rounded-md hover:bg-gray-100">
+<dialog class="du-modal" data-dialog-target="dialog" data-action="click->dialog#backdropClick turbo:submit-end->dialog#submitEnd">
+  <div class="du-modal-box">
+  <button type="button" data-action="dialog#close" class="absolute right-4 top-4 p-0.5 text-gray-400 rounded-md hover:bg-gray-100">
     <%= inline_svg_tag "svg/x-mark.svg", class: "size-6 pointer-events-none" %>
   </button>
-  <div class="p-4">
     <%= turbo_frame_tag "dialog_content", data: { dialog_target: "content" } %>
   </div>
 </dialog>
@@ -10,13 +10,13 @@
 <template data-dialog-target="loadingTemplate">
   <div class="animate-pulse">
     <div class="flex-1 space-y-6 py-1">
-      <div class="h-2 bg-slate-200 rounded w-1/2"></div>
+      <div class="h-2 bg-gray-300 rounded w-1/2"></div>
       <div class="space-y-3">
         <div class="grid grid-cols-3 gap-4">
-          <div class="h-2 bg-slate-200 rounded col-span-2"></div>
-          <div class="h-2 bg-slate-200 rounded col-span-1"></div>
+          <div class="h-2 bg-gray-300 rounded col-span-2"></div>
+          <div class="h-2 bg-gray-300 rounded col-span-1"></div>
         </div>
-        <div class="h-2 bg-slate-200 rounded"></div>
+        <div class="h-2 bg-gray-300 rounded"></div>
       </div>
     </div>
   </div>
