--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="du-dock du-dock-lg lg:hidden">
+<nav class="du-dock du-dock-lg lg:hidden sticky bottom-0">
   <% if current_organization %>
     <%= active_link_to organization_dashboard_path(@organization), class_active: "du-dock-active", class: "" do %>
       <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
@@ -10,9 +10,13 @@
       <span class="du-dock-label">Projects</span>
     <% end %>
   <% else %>
+    <%= active_link_to discover_path, active: :exclusive, class_active: "du-dock-active", class: "" do %>
+      🧭
+      <span class="du-dock-label">Discover</span>
+    <% end %>
     <%= active_link_to organizations_path, active: :exclusive, class_active: "du-dock-active", class: "" do %>
-      <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-[1.2em]" %>
-      <span class="du-dock-label">Organizations</span>
+      🏠
+      <span class="du-dock-label"><%= t("organizations.index.title") %></span>
     <% end %>
   <% end %>
 </nav>
