--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render PageComponent.new(title: t("organizations.index.title")) do |component| %>
   <% component.with_action_list do %>
-    <%= link_to t("shared.actions.new"), new_organization_path, class: "du-btn du-btn-primary" %>
+    <%= link_to t("shared.actions.new"), new_organization_path, data: { turbo_frame: "dialog_content", action: "dialog#open" }, class: "du-btn du-btn-primary" %>
   <% end %>
 
   <div id="organizations" class="space-y-4">
