--- a/app/views/organizations/invitations/index.html.erb
+++ b/app/views/organizations/invitations/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, t("organizations.invitations.index.title") %>
 
-<%= render PageComponent.new(title: t("organizations.invitations.index.page_title", organization: @organization.name)) do |component| %>
+<%= render PageComponent.new(title: t("organizations.invitations.index.title")) do |component| %>
   <div id="invitations" class="space-y-4">
     <% @invitations.each do |invitation| %>
       <%= render invitation, invitation: %>
