--- a/app/views/organizations/membership_requests/index.html.erb
+++ b/app/views/organizations/membership_requests/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, t("membership_requests.index.title") %>
 
-<%= render PageComponent.new(title: t("membership_requests.index.page_title", organization: @organization.name)) do |component| %>
+<%= render PageComponent.new(title: t("membership_requests.index.title")) do |component| %>
   <div id="membership_requests" class="space-y-4">
     <% @membership_requests.each do |membership_request| %>
       <%= render membership_request, membership_request: %>
