--- a/app/views/organizations/access_request/user_request_for_organizations/_user_request_for_organization.html.erb
+++ b/app/views/organizations/access_request/user_request_for_organizations/_user_request_for_organization.html.erb
@@ -1,4 +1,4 @@
-<div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100">
+<div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-base-200">
   <div class="flex items-center gap-2">
     <%= "User email: #{membership_request.user.email}" %>
     <br>
