--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -19,8 +19,25 @@
   </div>
 
   <div class="">
-    <%= form.label :privacy_setting %>
-    <%= form.select :privacy_setting, options_for_select(Organization.privacy_settings.keys.map { |key| [key.humanize, key] }, organization.privacy_setting), {}, class: "form-input" %>
+    <%= form.label :privacy_setting, class: "block text-sm font-medium text-gray-700 mb-2" %>
+    <div class="space-y-4">
+      <% Organization.privacy_settings.each do |key, value| %>
+        <div class="relative">
+          <%= form.radio_button :privacy_setting, value, class: "peer sr-only" %>
+          <%= form.label "privacy_setting_#{key}".to_sym, class: "flex items-center p-4 border rounded-lg cursor-pointer peer-checked:border-primary peer-checked:bg-primary/5 hover:bg-gray-50" do %>
+            <div class="flex items-center gap-x-3">
+              <div class="flex-shrink-0">
+                <%= inline_svg_tag privacy_setting_options(key)[:icon_path], class: "size-6 text-gray-600 peer-checked:text-primary" %>
+              </div>
+              <div class="flex items-baseline gap-x-2">
+                <span class="font-medium"><%= privacy_setting_options(key)[:display_text] %></span>
+                <span class="text-sm text-gray-500"><%= privacy_setting_options(key)[:description_text] %></span>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
   <div class="inline">
