--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -22,7 +22,7 @@
     <%= form.label :privacy_setting, class: "block text-sm font-medium text-gray-700 mb-2" %>
     <div class="space-y-4 grid grid-cols-3 gap-4">
       <% Organization.privacy_settings.each do |key, value| %>
-        <div class="">
+        <div class="h-full">
           <%= form.radio_button :privacy_setting, value, class: "peer sr-only" %>
           <%= form.label "privacy_setting_#{key}".to_sym, class: "flex flex-col items-center justify-center p-4 h-full border rounded-lg cursor-pointer text-center peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary peer-checked:bg-primary/5 hover:bg-gray-50 transition-all duration-150 ease-in-out" do %>
             <div class="flex flex-col items-center gap-y-2">
