--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -19,17 +19,18 @@
   </div>
 
   <div class="">
-    <%= form.label :privacy_setting, class: "block text-sm font-medium text-gray-700 mb-2" %>
-    <div class="space-y-4 grid grid-cols-3 gap-4">
+    <%= form.label :privacy_setting %>
+    <div class="space-y-4 grid grid-cols-1 lg:grid-cols-3 gap-4">
       <% Organization.privacy_settings.each do |key, value| %>
         <div class="h-full">
           <%= form.radio_button :privacy_setting, value, class: "peer sr-only" %>
           <%= form.label "privacy_setting_#{key}".to_sym, class: "flex flex-col items-center justify-center p-4 h-full border du-border-base-300 rounded-lg cursor-pointer text-center du-bg-base-100 hover:du-bg-base-200 peer-checked:du-border-primary peer-checked:ring-3 peer-checked:du-ring-primary peer-checked:du-bg-primary/10 transition-all duration-150 ease-in-out" do %>
-            <div class="flex flex-col items-center gap-y-2">
-              <div class="flex-shrink-0">
-                <%= inline_svg_tag privacy_setting_options(key)[:icon_path], class: "size-8 text-base-content opacity-70 peer-checked:du-text-primary peer-checked:opacity-100" %>
+            <div class="flex flex-row lg:flex-col w-full items-center gap-4 justify-between">
+              <div class="">
+                <%#= inline_svg_tag privacy_setting_options(key)[:icon_path], class: "size-8 text-base-content opacity-70 peer-checked:du-text-primary peer-checked:opacity-100" %>
+                <%= privacy_setting_options(key)[:icon_path] %>
               </div>
-              <div class="flex flex-col items-center">
+              <div class="flex flex-col lg:items-center items-start flex-grow text-center">
                 <span class="font-semibold text-sm"><%= privacy_setting_options(key)[:display_text] %></span>
                 <span class="text-xs text-base-content opacity-70 peer-checked:du-text-primary peer-checked:opacity-100"><%= privacy_setting_options(key)[:description_text] %></span>
               </div>
