--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -24,7 +24,7 @@
       <% Organization.privacy_settings.each do |key, value| %>
         <div class="h-full">
           <%= form.radio_button :privacy_setting, value, class: "peer sr-only" %>
-          <%= form.label "privacy_setting_#{key}".to_sym, class: "flex flex-col items-center justify-center p-4 h-full border du-border-base-300 rounded-lg cursor-pointer text-center du-bg-base-100 hover:du-bg-base-200 peer-checked:du-border-primary peer-checked:ring-3 peer-checked:du-ring-primary peer-checked:du-bg-primary/10 transition-all duration-150 ease-in-out" do %>
+          <%= form.label "privacy_setting_#{key}".to_sym, class: "flex flex-col items-center justify-center h-full p-4 text-center du-bg-base-100 border du-border-base-300 rounded-lg transition-all duration-150 ease-in-out cursor-pointer hover:du-bg-base-200 peer-checked:du-border-primary peer-checked:ring-3 peer-checked:du-ring-primary peer-checked:du-bg-primary/10" do %>
             <div class="flex flex-row lg:flex-col w-full items-center gap-4 justify-between">
               <div class="">
                 <%#= inline_svg_tag privacy_setting_options(key)[:icon_path], class: "size-8 text-base-content opacity-70 peer-checked:du-text-primary peer-checked:opacity-100" %>
