--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,8 +1,7 @@
 <% content_for :title, t("organizations.new.title") %>
 
-<%= turbo_frame_tag 'dialog_content' do %>
+<%= turbo_frame_tag "dialog_content" do %>
   <%= render PageComponent.new(title: t("organizations.new.title")) do |component| %>
     <%= render "form", organization: @organization %>
-    <%= link_to t("shared.actions.cancel"), organizations_path, class: "du-btn du-btn-secondary" %>
   <% end %>
 <% end %>
