--- a/app/views/public/organizations/_organization.html.erb
+++ b/app/views/public/organizations/_organization.html.erb
@@ -13,7 +13,7 @@
 
   <div class="flex justify-end">
     <% if organization.participant?(current_user) %>
-      <%= link_to t("public.organizations.show.actions.open"), organization_dashboard_path(organization), class: "du-btn du-btn-primary" %>
+      <%= link_to t("public.organizations.show.actions.open"), organization_dashboard_path(organization), class: "du-btn du-btn-primary", data: { turbo_frame: "_top" } %>
     <% elsif organization.user_requests.pending.exists?(user: current_user) %>
       <button class="du-btn du-btn-primary du-btn-disabled" disabled>
         <%= t("public.organizations.show.actions.waiting_for_approval") %>
