--- a/app/views/organizations/invitations/index.html.erb
+++ b/app/views/organizations/invitations/index.html.erb
@@ -1,7 +1,11 @@
 <% content_for :title, t("organizations.invitations.index.title") %>
 
 <%= render "organizations/memberships/tabs", active_tab: :invitations do %>
-  <%= render PageComponent.new(title: t("organizations.invitations.index.title")) do |component| %>
+  <%= render PageComponent.new(title: t("organizations.invitations.index.title"), full_width: true) do |component| %>
+    <% component.with_action_list do %>
+      <%= link_to t("organizations.memberships.new.title"), new_organization_invitation_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" if policy(@organization.memberships.new).new? %>
+    <% end %>
+
     <div id="invitations" class="space-y-4">
       <% @invitations.each do |invitation| %>
         <%= render invitation, invitation: %>
