--- a/app/views/organizations/memberships/index.html.erb
+++ b/app/views/organizations/memberships/index.html.erb
@@ -27,7 +27,7 @@
 <% end %>
 
 <%= render "organizations/memberships/tabs", active_tab: :memberships do %>
-  <%= render PageComponent.new(title: t("organizations.memberships.index.title")) do |component| %>
+  <%= render PageComponent.new(title: t("organizations.memberships.index.title"), full_width: true) do |component| %>
     <% component.with_action_list do %>
       <%= link_to t("organizations.memberships.new.title"), new_organization_invitation_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" if policy(@organization.memberships.new).new? %>
     <% end %>
