--- a/app/views/organizations/memberships/_tabs.html.erb
+++ b/app/views/organizations/memberships/_tabs.html.erb
@@ -14,8 +14,8 @@
 
     <%= link_to organization_invitations_path(@organization), 
         class: "#{base_classes} #{active_tab == :invitations ? active_classes : inactive_classes}" do %>
-      ⬇️
       <div class="flex items-center gap-2">
+        <span class="text-xs">⬆️</span>
         <%= t("organizations.invitations.index.title") %>
         <% if @organization.user_invitations.pending.count > 0 %>
           <span class="du-badge du-badge-neutral du-badge-outline du-badge-sm"><%= @organization.user_invitations.pending.count %></span>
@@ -26,8 +26,8 @@
     <% if @organization.privacy_setting_restricted? %>
       <%= link_to organization_membership_requests_path(@organization), 
           class: "#{base_classes} #{active_tab == :requests ? active_classes : inactive_classes}" do %>
-        ⬆️
         <div class="flex items-center gap-2">
+          <span class="text-xs">⬇️</span>
           <%= t("membership_requests.index.title") %>
           <% if @organization.user_requests.pending.count > 0 %>
             <span class="du-badge du-badge-neutral du-badge-outline du-badge-sm"><%= @organization.user_requests.pending.count %></span>
