--- a/app/views/public/organizations/_organization.html.erb
+++ b/app/views/public/organizations/_organization.html.erb
@@ -15,9 +15,7 @@
     <% if organization.participant?(current_user) %>
       <%= link_to t("public.organizations.show.actions.open"), organization_dashboard_path(organization), class: "du-btn du-btn-primary", data: { turbo_frame: "_top" } %>
     <% elsif organization.user_requests.pending.exists?(user: current_user) %>
-      <button class="du-btn du-btn-primary du-btn-disabled" disabled>
-        <%= t("public.organizations.show.actions.waiting_for_approval") %>
-      </button>
+      <%= button_to t("public.organizations.show.actions.cancel_request"), user_membership_request_path(organization.user_requests.pending.find_by(user: current_user)), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error" %>
     <% elsif organization.user_invitations.pending.exists?(user: current_user) %>
       <%= button_to t("public.organizations.show.actions.accept_invitation"), approve_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "du-btn du-btn-primary" %>
       <%= button_to t("public.organizations.show.actions.reject_invitation"), reject_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "du-btn du-btn-primary" %>
